--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Caléndari</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="https://pluspng.com/img-png/calendar-icon-1600.png"/>
 </head>
 <body>
-    
+    <section class="p-0">
+        <div class="container-fluid p-0 min-vh-100 d-flex flex-column bg-lightblue">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-lightblue">
+                <a class="navbar-brand redwine" href="#">Caléndari</a>
+                <button class="navbar-toggler redwine" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon redwine"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarsExample05">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                      <a class="nav-link redwine" href="#">Contacto</a><!--<span class="sr-only">(current)</span>-->
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link redwine" href="#">Apóyanos</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                      <div class="dropdown-menu" aria-labelledby="dropdown05">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li> -->
+                  </ul>
+                </div>
+            </nav>
+            <div class="row flex-fill flex-column align-content-center">
+                <div class="col-sm-4 my-auto">
+                    <div class="mt-5 text-center">
+                        <h1 class="text-left">La mejor forma de organizarte y cumplir tus objetivos</h1>
+                        <p class="text-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque alias amet ducimus nisi adipisci, accusantium est commodi, veniam nesciunt pariatur dolorum non quasi? Nihil dolore fugit ipsam, est totam recusandae.</p>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
