--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <li class="nav-item">
                       <a class="nav-link redwine" href="#">Apóyanos</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
+                    <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown05">
                         <a class="dropdown-item" href="#">Action</a>
                         <a class="dropdown-item" href="#">Another action</a>
                         <a class="dropdown-item" href="#">Something else here</a>
                       </div>
-                    </li> -->
+                    </li>
                   </ul>
                 </div>
             </nav>
