--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="col-sm-4 my-auto">
                     <div class="mt-5 text-center">
                         <h1 class="text-left">La mejor forma de organizarte y cumplir tus objetivos</h1>
-                        <p class="text-left">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque alias amet ducimus nisi adipisci, accusantium est commodi, veniam nesciunt pariatur dolorum non quasi? Nihil dolore fugit ipsam, est totam recusandae.</p>
+                        <p class="text-left">Esta es una breve descripción</p>
                     </div>
                 </div>
             </div>
