--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             </div>
         </div>    
     </section>
+    <section id="contenido">
+      <!-- Aquí va el código de Marquito, lo del contenido -->
+
+    </section>
+    <section id="contact">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-control"></div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
