First section with image and button added

--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
                     <li class="nav-item">
                       <a class="nav-link redwine" href="#">Apóyanos</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                      <div class="dropdown-menu" aria-labelledby="dropdown05">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
-                    </li> -->
                   </ul>
                 </div>
             </nav>
             <div class="row flex-fill flex-column align-content-center">
-                <div class="col-sm-4 my-auto">
-                    <div class="mt-5 text-center">
+                <div class="col-sm-6 my-auto">
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="mt-5 text-center">
                         <h1 class="text-left">La mejor forma de organizarte y cumplir tus objetivos</h1>
                         <p class="text-left">Esta es una breve descripción</p>
+                        <button class="btn">¡Contáctanos!</button>
                     </div>
+                    </div>
+                    <div class="col-6">
+                      <img src="img/calendario.jpg" class="img-fluid">
+                    </div>
+                  </div>
+                    
                 </div>
             </div>
         </div>    
@@ -55,7 +56,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <div class="form-control"></div>
+            <div class="form-group">
+
+            </div>
           </div>
           <div class="col-md-6"></div>
         </div>
