--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
                 <div class="col-sm-6 my-auto">
                   <div class="row">
                     <div class="col-6">
-                      <div class="mt-5 text-center">
-                        <h1 class="text-left">La mejor forma de organizarte y cumplir tus objetivos</h1>
-                        <p class="text-left">Esta es una breve descripción</p>
+                      <div class="mt-5 " id="desc">
+                        <br>
+                        <h1 class="text-center">La mejor forma de organizarte y cumplir tus objetivos</h1>
+                        <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
+                          Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
                         <button class="btn">¡Contáctanos!</button>
                     </div>
                     </div>
                     <div class="col-6">
-                      <img src="img/calendario.jpg" class="img-fluid">
+                      <img src="img/calendar.png" class="img-fluid">
                     </div>
                   </div>
                     
