Overflow x axis hidden now

--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
                 <div class="col-sm-6 my-auto">
                   <div class="row">
                     <div class="col-6">
-                      <div class="mt-5 " id="desc">
-                        <br>
-                        <h1 class="text-center">La mejor forma de organizarte y cumplir tus objetivos</h1>
-                        <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
-                          Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
+                      <div class="mt-5 text-center">
+                        <h1 class="text-left">La mejor forma de organizarte y cumplir tus objetivos</h1>
+                        <p class="text-left">Esta es una breve descripción</p>
                         <button class="btn">¡Contáctanos!</button>
                     </div>
                     </div>
                     <div class="col-6">
-                      <img src="img/calendar.png" class="img-fluid">
+                      <img src="img/calendario.jpg" class="img-fluid">
                     </div>
                   </div>
                     
@@ -54,19 +52,22 @@
       <!-- Aquí va el código de Marquito, lo del contenido -->
 
     </section>
-    <section id="contact">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-
-            </div>
+    <section id="contact p-0">
+      <div class="container-fluid p-0 min-vh-100 d-flex flex-column bg-lightblue">
+        <div class="row flex-fill flex-column align-content-center">
+          <div class="col-md-6 my-auto">
+            <form>
+              <div class="form-group">
+                <label class="ls text-uppercase">Nombre*</label>
+                <input type="text form-control" id="name" name="name" placeholder="Ingresa tu nombre" required="required">
+              </div>
+            </form>
           </div>
-          <div class="col-md-6"></div>
         </div>
       </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
