navbar scroll to sections

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link redwine" href="#">Contacto</a><!--<span class="sr-only">(current)</span>-->
+                      <a class="nav-link redwine " href="#contenido">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link redwine" href="#">Apóyanos</a>
+                      <a class="nav-link redwine " href="#contact p-0">Contacto</a>
                     </li>
                   </ul>
                 </div>
@@ -41,7 +41,7 @@
                         <h1 class=>La mejor forma de organizarte y cumplir tus objetivos</h1>
                         <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
                           Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
-                        <button class="btn">¡Contáctanos!</button>
+                        <button class="btn-contact" >¡Contáctanos!</button>
                       </div>
                     </div>
                   </div>
