Firebase already working. Added phone formatting to phone input

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                   </div>
                   <div class="form-group">
                     <label class="ls text-uppercase">Teléfono</label>
-                    <input type="tel" class="form-control input-border-bottom" id="email" name="email" placeholder="Ingresa tu número de teléfono">
+                    <input type="tel" class="form-control input-border-bottom" id="phone" name="phone" placeholder="Ingresa tu número de teléfono">
                   </div>
                   <div class="form-group">
                     <label class="ls text-uppercase">¡Queremos escucharte!</label>
                     <textarea name="message" id="message" class="form-control input-border-bottom" placeholder="Introduce tu mensaje"></textarea>
-                  </div>                  
+                  </div>
+                  <button id="send_contact" class="btn w-100 fill_button"><span>Enviar</span></button>
                 </form>
-                <button id="send_contact" class="btn w-100 fill_button"><span>Enviar</span></button>
               </div>
               <div class="col-md-5">
                 <img src="img/squid.png" class="img-fluid">
@@ -109,6 +109,8 @@
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/cleave.js@1.6.0,npm/cleave.js@1.6.0/dist/addons/cleave-phone.mx.min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/index.js" type="module"></script>
     <script src="scripts/contact.js" type="module"></script>
