Content section added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,53 @@
     <section id="contenido">
       <!-- Aquí va el código de Marquito, lo del contenido -->
       <div class="container-fluid p-0 min-vh-100 d-flex flex-column">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima molestiae alias? Eius ratione, rem natus earum architecto nisi perspiciatis illo fugit error velit repellat explicabo voluptas, cumque esse quia!
+        <div class="row">
+          <div class="col-12 text-center mt-5">
+            <h2>¿Qué es Caléndari?</h2>
+            <p> Una web app que te simplifica y organiza tu día a día</p>
+            <p class="mt-n3"> Pensada por y para estudiantes</p>
+          </div>
+        </div>
+        <div class="row mt-5 mb-5">
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/calendar-1.svg" class="img-fluid">
+              <p class="mt-2"> No pierdes de vista tus objetivos</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/clipboard.svg" class="img-fluid">
+              <p class="mt-2"> Terminas todas tus actividades</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/grow-1.svg" class="img-fluid">
+              <p class="mt-2"> Consigue un equilibrio</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/book.svg" class="img-fluid">
+              <p class="mt-2"> Tu día se organiza automáticamente</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/cross.svg" class="img-fluid">
+              <p class="mt-2"> Olvídate de la procrastinación</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="text-center">
+              <img src="img/ribbon.svg" class="img-fluid">
+              <p class="mt-2"> Recomendaciones con base en tus gustos</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section id="contact p-0">
@@ -116,3 +162,4 @@
     <script src="scripts/contact.js" type="module"></script>
 </body>
 </html>
+
