Responsive issues were solved. Scrollbar now is hidden

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <div class="row flex-fill flex-column align-content-center">
                 <div class="col-sm-6 my-auto">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-md-6">
                       <img src="img/calendar.png" class="img-fluid">
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 mx-4 mx-md-0 mb-4 mb-md-0">
                       <div class="mt-0" id="desc">
                         <br>
                         <h1 class=>La mejor forma de organizarte y cumplir tus objetivos</h1>
                         <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
                           Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
-                        <button class="btn-contact" >¡Contáctanos!</button>
+                        <button class="btn btn-contact" >¡Contáctanos!</button>
                       </div>
                     </div>
                   </div>
@@ -114,7 +114,7 @@
         <div class="row flex-fill flex-column align-content-center bg-lightblue mt-n4">
           <div class="col-md-8 my-auto">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 mt-5 mt-md-0 mx-3 mx-md-0">
                 <form id="prod-form">
                   <div class="row">
                     <div class="col-6">
@@ -145,7 +145,7 @@
                   <button id="send_contact" class="btn w-100 fill_button"><span>Enviar</span></button>
                 </form>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-5 m-3 m-md-0">
                 <img src="img/squid.png" class="img-fluid">
               </div>
             </div>
