--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                 </form>
               </div>
               <div class="col-md-5 m-3 m-md-0">
-                <img src="img/squid.png" class="img-fluid">
+                <div class="text-center">
+                  <img src="img/Darío.png" class="img-fluid">
+                </div>                
               </div>
             </div>
           </div>
