Slogan has been changed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="col-md-6 mx-4 mx-md-0 mb-4 mb-md-0">
                       <div class="mt-0" id="desc">
                         <br>
-                        <h1 class=>La mejor forma de organizarte y cumplir tus objetivos</h1>
+                        <h1>¡Construye tu día!</h1>
                         <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
                           Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
                         <button class="btn btn-contact" >¡Contáctanos!</button>
