--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="p-0">
         <div class="container-fluid p-0 min-vh-100 d-flex flex-column bg-lightblue">
             <nav class="navbar navbar-expand-lg navbar-dark bg-lightblue">
-                <a class="navbar-brand redwine" href="#">Caléndari</a>
+                <a class="navbar-brand redwine" href="#" id="home">Caléndari</a>
                 <button class="navbar-toggler redwine" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon redwine"></span>
                 </button>
@@ -26,9 +26,55 @@
                     <li class="nav-item">
                       <a class="nav-link redwine " href="#contact p-0">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link redwine " href="#" data-toggle="modal" data-target="#signin">Inicia sesión</a>
+                    </li>
                   </ul>
                 </div>
             </nav>
+
+            <!-- Signin modal -->
+            <div class="modal fade" id="signin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Inicia sesión</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form id="signin-form">
+                      <div class="form-group">
+                        <input type="text" id="signin-email" class="form-control" placeholder="Email" required>
+                      </div>
+                      <div class="form-group">
+                        <input type="password" id="signin-password" class="form-control" placeholder="password" required>
+                      </div>
+                      <button type="submit" class="btn btn-contact">Sign in</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Signup modal -->
+            <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header border-bottom-0">
+                    <h5 class="modal-title text-center" id="exampleModalLabel">¡Crea tu perfil!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
             <div class="row flex-fill flex-column align-content-center">
                 <div class="col-sm-6 my-auto">
                   <div class="row">
@@ -41,8 +87,26 @@
                         <h1>¡Construye tu día!</h1>
                         <p > Si estás buscando una opción para planificar y administrar mejor tu tiempo en Caléndari encontrarás la solución.
                           Te ofrecemos las mejores sugerencias de acuerdo a tus intereses personales. </p>
-                        <button class="btn btn-contact" >¡Contáctanos!</button>
+                        <button class="btn btn-contact" id="start">¡Empieza!</button>
                       </div>
+                      <form id="signup-form" style="display: none;" class="mt-4">
+                        <div class="text-center mb-4">
+                          <h4>¡Cr<span class="redbar">ea tu per</span>fil!</h4>
+                        </div>
+                        <div class="form-group">
+                          <input type="text" id="signup-name" class="form-control input-border-bottom" placeholder="Introduce tu nombre" required>
+                        </div>
+                        <div class="form-group"></div>
+                        <div class="form-group">
+                          <input type="text" id="signup-email" class="form-control input-border-bottom" placeholder="Email" required>
+                        </div>
+                        <div class="form-group">
+                          <input type="password" id="signup-password" class="form-control input-border-bottom" placeholder="password" required>
+                        </div>
+                        <div class="text-center">
+                          <button type="submit" class="btn btn-contact">Crear cuenta</button>
+                        </div>
+                      </form>
                     </div>
                   </div>
                     
@@ -155,7 +219,9 @@
         </div>
       </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/combine/npm/cleave.js@1.6.0,npm/cleave.js@1.6.0/dist/addons/cleave-phone.mx.min.js"></script>
