--- a/index.html
+++ b/index.html
@@ -93,10 +93,18 @@
                         <div class="text-center mb-4">
                           <h4>¡Cr<span class="redbar">ea tu per</span>fil!</h4>
                         </div>
-                        <div class="form-group">
-                          <input type="text" id="signup-name" class="form-control input-border-bottom" placeholder="Introduce tu nombre" required>
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="form-group">
+                              <input type="text" id="signup-name" class="form-control input-border-bottom" placeholder="Nombre" required>
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="form-group">
+                              <input type="text" id="signup-lname" class="form-control input-border-bottom" placeholder="Apellido" required>
+                            </div>
+                          </div>
                         </div>
-                        <div class="form-group"></div>
                         <div class="form-group">
                           <input type="text" id="signup-email" class="form-control input-border-bottom" placeholder="Email" required>
                         </div>
@@ -228,6 +236,9 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/index.js" type="module"></script>
     <script src="scripts/contact.js" type="module"></script>
+    <script src="scripts/signup.js" type="module"></script>
+    <script src="scripts/signIn.js" type="module"></script>
+    <script src="scripts/logout.js" type="module"></script>
 </body>
 </html>
 
