--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
                   <span class="navbar-toggler-icon redwine"></span>
                 </button>
               
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                  <ul class="navbar-nav ml-auto">
+                <div class="collapse navbar-collapse" id="navbar">
+                  <ul class="navbar-nav ml-auto" id="nav-ul">
                     <li class="nav-item">
                       <a class="nav-link redwine " href="#contenido">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link redwine " href="#contact p-0">Contacto</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="nav-signin">
                       <a class="nav-link redwine " href="#" data-toggle="modal" data-target="#signin">Inicia sesión</a>
+                    </li>
+                    <li class="nav-item" id="nav-logout" style="display: none;">
+                      <form id="close-form">
+                        <button type="submit" id="logout" class="btn btn-darkblue">Cerrar sesión</button>
+                      </form>
                     </li>
                   </ul>
                 </div>
