Agenda display is working

--- a/agenda.html
+++ b/agenda.html
@@ -57,6 +57,9 @@
         <div class="container bg-darkblue rounded py-3" id="days">
 
         </div>
+        <div class="container mt-5" id="day-content">
+
+        </div>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
