--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"
   />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="css/agenda.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/slick-theme.css">
+    <link rel="stylesheet" href="../css/agenda.css">
     <link rel="icon" type="image/png" href="https://pluspng.com/img-png/calendar-icon-1600.png"/>
     <title>Agenda</title>
 </head>
-<body onload="getDaysArray(new Date().getFullYear(), new Date().getMonth() + 1)">
+<body>
 
-    <div class="loader-wrapper" style="display: none;">
+    <div class="loader-wrapper">
         <div id="preloader">
             <div id="loader"></div>
         </div>
@@ -58,7 +58,8 @@
 
         </div>
         <div class="container mt-5" id="day-content">
-
+          <form class="schedule-form">
+          </form>
         </div>
 
     </div>
@@ -67,6 +68,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="scripts/agenda.js"></script>
+    <script src="../scripts/index.js" type="module"></script>
+    <script src="../scripts/agenda.js" type="module"></script>
 </body>
+
 </html>
