--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -34,9 +34,9 @@
                 <li class="nav-item">
                   <a class="nav-link redwine " href="#">Mi perfil</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link redwine " href="#">Cerrar sesión</a>
-                </li>
+                <form id="close-form">
+                  <button type="submit" id="logout" class="btn btn-darkblue">Cerrar sesión</button>
+                </form>
               </ul>
             </div>
         </nav>
@@ -69,6 +69,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../scripts/index.js" type="module"></script>
+    <script src="../scripts/logout.js" type="module"></script>
     <script src="../scripts/agenda.js" type="module"></script>
 </body>
 </html>
